fix(landing pages): all page content has been changed, along with images and some elements

--- a/src/app/form-ge/form-ge.component.html
+++ b/src/app/form-ge/form-ge.component.html
@@ -7,13 +7,13 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-sm text-center">
-            <div class="logo-talentos-globais"></div>
+            <div class="logo-empreendedor-global"></div>
           </div>
         </div>
         <div *ngIf="!completedSignup">
           <div class="row">
             <div class="col-sm">
-              <h1>Vivencie a realidade de uma empresa internacional, desenvolva suas habilidades e traga o mundo para o seu currículo.</h1>
+              <h1>Assuma os desafios de trabalhar em uma Startup e se desenvolva como um líder empreendedor.</h1>
             </div>
           </div>
           <div class="row" *ngIf="!loading && !completedSignup">
@@ -328,8 +328,8 @@
                     <div class="row justify-content-center">
                       <div class="col-sm-12" id="content-resultado">
                         <p>
-                          Agora que você criou a sua conta, você poderá acessar a nossa plataforma e começar a buscar por projetos de intercâmbio social
-                          na data e destina ideal para você! Fique atento ao seu e-mail onde enviaremos mais informações.
+                          Agora que você criou a sua conta, você poderá acessar a nossa plataforma e começar a buscar por projetos de intercâmbio profissional em startups
+                          na data e destino ideal para você! Fique atento ao seu e-mail onde enviaremos mais informações.
                         </p>
                         <button (click)="accessAiesec()" type="button" class="btn btn-primary">Acessar o Portal de Oportunidades</button>
                       </div>
