--- a/src/app/form-ge/form-ge.component.scss
+++ b/src/app/form-ge/form-ge.component.scss
@@ -1399,13 +1399,13 @@ label {
     }
 }
 
-.logo-talentos-globais {
+.logo-empreendedor-global {
     max-width: 350px;
     width: 100%;
     height: 200px;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-    background-image: url('../../assets/images/logo-talentos-globais.png');
+    background-image: url('../../assets/images/logo-empreendedor-global.png');
     margin: auto
 }
