--- a/src/app/form-gv/form-gv.component.html
+++ b/src/app/form-gv/form-gv.component.html
@@ -272,7 +272,7 @@
                     <div class="row justify-content-center">
                       <div class="col-sm-12" id="content-resultado">
                         <p>
-                          Agora que você criou a sua conta, você poderá acessar a nossa plataforma e começar a buscar por projetos de intercâmbio profissional
+                          Agora que você criou a sua conta, você poderá acessar a nossa plataforma e começar a buscar por projetos de intercâmbio voluntário
                           na data e destina ideal para você! Fique atento ao seu e-mail onde enviaremos mais informações.
                         </p>
                         <button (click)="accessAiesec()" type="button" class="btn btn-primary">Acessar o Portal de Oportunidades</button>
