--- a/src/app/landing-footer/landing-footer.component.html
+++ b/src/app/landing-footer/landing-footer.component.html
@@ -144,7 +144,7 @@
           <div class="footer-group-links col-md-3 col-sm-6">
             <p class="semibold footer-link-title">Blog</p>
             <p><a href="http://business.aiesec.org.br/">Business</a></p>
-            <p><a href="http://aiesec.org.br/blog/estudantes/">Estudantes</a></p>
+            <p><a href="http://aiesec.blog.br/">Estudantes</a></p>
           </div>
           <div class="footer-group-links col-md-3 col-sm-6">
             <p class="semibold footer-link-title"><a href="http://aiesec.org.br/contato/">Contato</a></p>
