--- a/src/app/landing-page-ge/landing-page-ge.component.html
+++ b/src/app/landing-page-ge/landing-page-ge.component.html
@@ -2,7 +2,7 @@
   <div class="goToTop" [ngx-scroll-to]="'#header-product'">
     <i class="fas fa-sort-up"></i>
   </div>
-  
+
   <app-landing-page-menu></app-landing-page-menu>
 
   <section class="product-description margin-top-and-bottom">
@@ -14,12 +14,15 @@
             Visão geral do programa
           </h2>
           <p>
-            O Empreendedor Global é uma experiência de imersão em Startup durante 6 a 12 semanas em que o jovem tem a chance de viver o ambiente dinâmico e inovador de uma Startup. As áreas de atuação são Marketing, Administração, T.I., Design e Desenvolvimento de Negócios! O jovem precisa apenas ter o inglês intermediário e alguma experiência prévia profissional ou acadêmica na área de atuação de preferência
+            O Empreendedor Global é uma experiência de imersão em Startup durante 6 a 12 semanas em que o jovem tem a chance de viver
+            o ambiente dinâmico e inovador de uma Startup. As áreas de atuação são Marketing, Administração, T.I., Design
+            e Desenvolvimento de Negócios! O jovem precisa apenas ter o inglês intermediário e alguma experiência prévia
+            profissional ou acadêmica na área de atuação de preferência
         </div>
       </div>
     </div>
   </section>
-  
+
   <!-- Form ge -->
   <app-form-ge id="form"></app-form-ge>
 
@@ -57,18 +60,19 @@
             </div>
           </div>
           <div class="row">
-              <div class="col-lg-2 col-md-12 col-sm-12 centered">
-                <div class="round circle icon with-border without-background ge lower"></div>
-              </div>
-              <div class="col-lg-10 col-md-12 col-sm-12">
-                <h3 class="bold line-height-lower darker">
-                  Fazer o CV em inglês
-                </h3>
-                <p class="lighter">
-                  É necessário preparar seu CV em inglês para apresentar para as empresas que você está se candidatando. Não se preocupe, estamos aqui para te ajudar!
-                </p>
-              </div>
+            <div class="col-lg-2 col-md-12 col-sm-12 centered">
+              <div class="round circle icon with-border without-background ge lower"></div>
             </div>
+            <div class="col-lg-10 col-md-12 col-sm-12">
+              <h3 class="bold line-height-lower darker">
+                Fazer o CV em inglês
+              </h3>
+              <p class="lighter">
+                É necessário preparar seu CV em inglês para apresentar para as empresas que você está se candidatando. Não se preocupe, estamos
+                aqui para te ajudar!
+              </p>
+            </div>
+          </div>
           <div class="row">
             <div class="col-lg-2 col-md-12 col-sm-12 centered">
               <div class="round circle icon with-border without-background ge lower"></div>
@@ -78,36 +82,38 @@
                 Aplicar em vagas
               </h3>
               <p class="lighter">
-                No site você pode se candidatar as diversas vagas que encaixam no seu perfil, a partir da consultoria feita com seu escritório da AIESEC
+                No site você pode se candidatar as diversas vagas que encaixam no seu perfil, a partir da consultoria feita com seu escritório
+                da AIESEC
               </p>
             </div>
           </div>
           <div class="row">
-              <div class="col-lg-2 col-md-12 col-sm-12 centered">
-                <div class="round circle icon with-border without-background ge lower"></div>
-              </div>
-              <div class="col-lg-10 col-md-12 col-sm-12">
-                <h3 class="bold line-height-lower darker">
-                  Entrevistas para vagas que for selecionado
-                </h3>
-                <p class="lighter">
-                  Você vai passar por uma entrevista com a oportunidade que você se candidatou, para se aprsentar, responder algumas perguntas e tirar dúvidas
-                </p>
-              </div>
+            <div class="col-lg-2 col-md-12 col-sm-12 centered">
+              <div class="round circle icon with-border without-background ge lower"></div>
             </div>
-            <div class="row">
-                <div class="col-lg-2 col-md-12 col-sm-12 centered">
-                  <div class="round circle icon with-border without-background ge lower"></div>
-                </div>
-                <div class="col-lg-10 col-md-12 col-sm-12">
-                  <h3 class="bold line-height-lower darker">
-                    Ser aprovado na vaga
-                  </h3>
-                  <p class="lighter">
-                    Depois do contato com a AIESEC que vai te receber, você é convidado a fechar a vaga para aquele projeto
-                  </p>
-                </div>
-              </div>
+            <div class="col-lg-10 col-md-12 col-sm-12">
+              <h3 class="bold line-height-lower darker">
+                Entrevistas para vagas que for selecionado
+              </h3>
+              <p class="lighter">
+                Você vai passar por uma entrevista com a oportunidade que você se candidatou, para se apresentar, responder algumas perguntas
+                e tirar dúvidas
+              </p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-2 col-md-12 col-sm-12 centered">
+              <div class="round circle icon with-border without-background ge lower"></div>
+            </div>
+            <div class="col-lg-10 col-md-12 col-sm-12">
+              <h3 class="bold line-height-lower darker">
+                Ser aprovado na vaga
+              </h3>
+              <p class="lighter">
+                Depois do contato com a AIESEC que vai te receber, você é convidado a fechar a vaga para aquele projeto
+              </p>
+            </div>
+          </div>
           <div class="row">
             <div class="col-lg-2 col-md-12 col-sm-12 centered">
               <div class="round circle icon with-border without-background ge lower"></div>
@@ -158,7 +164,8 @@
                 Vou receber salário para trabalhar na Startup?
               </h3>
               <p class='lighter italic'>
-                Não, a experiência não é remunerada para este tipo de intercâmbio. Mas em compensação, você irá receber acomodação pelo período do intercâmbio.
+                Não, a experiência não é remunerada para este tipo de intercâmbio. Mas em compensação, você irá receber acomodação pelo período
+                do intercâmbio.
               </p>
             </div>
             <div class="col-sm-12">
@@ -166,7 +173,17 @@
                 As vagas são apenas em Startups?
               </h3>
               <p class='lighter italic'>
-                Não, existem vagas também em aceleradoras e incubadoras de negócios
+                Não, existem vagas também em aceleradoras e incubadoras de negócios.
+              </p>
+            </div>
+            <div class="col-sm-12">
+              <h3 class='semibold'>
+                Preciso de seguro saúde para viajar?
+              </h3>
+              <p class='lighter italic'>
+                Sim, o seguro saúde é obrigatório no seu intercâmbio com a AIESEC, para garantir seu bem-estar durante toda a viagem. Nós
+                recomendamos o seguro Assistcard para nossos intercambistas, mas você pode contratar a seguradora que você
+                preferir.
               </p>
             </div>
             <div class="col-sm-12">
@@ -174,7 +191,8 @@
                 Qual o tipo de acomodação que irei ficar?
               </h3>
               <p class='lighter italic'>
-                Depende do país que você está se aplicando, você pode ficar hospedado em uma casa de família voluntária, hostel ou apartamento com outros intercambistas!
+                Depende do país que você está se aplicando, você pode ficar hospedado em uma casa de família voluntária, hostel ou apartamento
+                com outros intercambistas!
               </p>
             </div>
             <div class="col-sm-12">
