--- a/src/app/landing-page-gt/landing-page-gt.component.html
+++ b/src/app/landing-page-gt/landing-page-gt.component.html
@@ -2,7 +2,7 @@
   <div class="goToTop" [ngx-scroll-to]="'#header-product'">
     <i class="fas fa-sort-up"></i>
   </div>
-  
+
   <app-landing-page-menu></app-landing-page-menu>
 
   <section class="product-description margin-top-and-bottom">
@@ -14,12 +14,16 @@
             Visão geral do programa
           </h2>
           <p>
-            O Talento Global é uma experiência de estágio internacional em empresas durante 3 a 12 meses em que o jovem tem a chance de viver o ambiente profissional e corporativo. As grandes áreas de estágio do Global Talento são: Ensino de Idiomas, Tecnologia da Informação e áreas de Administração, como finanças, gestão, RH e marketing. Para o processo, é necessário alguns requisitos como: inglês avançado e experiência na área que quer atuar. Nessa experiência, o intercambista recebe uma bolsa-auxílio para cobrir os custos básicos durante o período de intercâmbio.
+            O Talento Global é uma experiência internacional em empresas durante 3 a 12 meses em que o jovem tem a chance de viver o
+            ambiente profissional e corporativo. As grandes áreas de estágio do Talento Global são: Ensino de Idiomas, Tecnologia
+            da Informação e áreas de Administração, como finanças, gestão, RH e marketing. Para o processo, é necessário
+            alguns requisitos como: inglês avançado e experiência na área que quer atuar. Nessa experiência, o intercambista
+            recebe uma bolsa-auxílio para cobrir os custos básicos durante o período de intercâmbio.
         </div>
       </div>
     </div>
   </section>
-  
+
   <!-- Form gt -->
   <app-form-gt id="form"></app-form-gt>
 
@@ -57,18 +61,19 @@
             </div>
           </div>
           <div class="row">
-              <div class="col-lg-2 col-md-12 col-sm-12 centered">
-                <div class="round circle icon with-border without-background gt lower"></div>
-              </div>
-              <div class="col-lg-10 col-md-12 col-sm-12">
-                <h3 class="bold line-height-lower darker">
-                  Fazer o CV em inglês
-                </h3>
-                <p class="lighter">
-                  É necessário preparar seu CV em inglês para apresentar para as empresas que você está se candidatando. Não se preocupe, estamos aqui para te ajudar!
-                </p>
-              </div>
+            <div class="col-lg-2 col-md-12 col-sm-12 centered">
+              <div class="round circle icon with-border without-background gt lower"></div>
             </div>
+            <div class="col-lg-10 col-md-12 col-sm-12">
+              <h3 class="bold line-height-lower darker">
+                Fazer o CV em inglês
+              </h3>
+              <p class="lighter">
+                É necessário preparar seu CV em inglês para apresentar para as empresas que você está se candidatando. Não se preocupe, estamos
+                aqui para te ajudar!
+              </p>
+            </div>
+          </div>
           <div class="row">
             <div class="col-lg-2 col-md-12 col-sm-12 centered">
               <div class="round circle icon with-border without-background gt lower"></div>
@@ -78,36 +83,38 @@
                 Aplicar em vagas
               </h3>
               <p class="lighter">
-                No site você pode se candidatar as diversas vagas que encaixam no seu perfil, a partir da consultoria feita com seu escritório da AIESEC
+                No site você pode se candidatar as diversas vagas que encaixam no seu perfil, a partir da consultoria feita com seu escritório
+                da AIESEC
               </p>
             </div>
           </div>
           <div class="row">
-              <div class="col-lg-2 col-md-12 col-sm-12 centered">
-                <div class="round circle icon with-border without-background gt lower"></div>
-              </div>
-              <div class="col-lg-10 col-md-12 col-sm-12">
-                <h3 class="bold line-height-lower darker">
-                  Entrevistas para vagas que for selecionado
-                </h3>
-                <p class="lighter">
-                  Você vai passar por algumas entrevists ao longo do processo para a vaga a qual você se candidatou
-                </p>
-              </div>
+            <div class="col-lg-2 col-md-12 col-sm-12 centered">
+              <div class="round circle icon with-border without-background gt lower"></div>
             </div>
-            <div class="row">
-                <div class="col-lg-2 col-md-12 col-sm-12 centered">
-                  <div class="round circle icon with-border without-background gt lower"></div>
-                </div>
-                <div class="col-lg-10 col-md-12 col-sm-12">
-                  <h3 class="bold line-height-lower darker">
-                    Ser aprovado na vaga
-                  </h3>
-                  <p class="lighter">
-                    Depois das entrevistas, você será convidado a fechar o intercâmbio para a oportunidade que for aceito, mediante o pagamento de uma taxa administrativa
-                  </p>
-                </div>
-              </div>
+            <div class="col-lg-10 col-md-12 col-sm-12">
+              <h3 class="bold line-height-lower darker">
+                Entrevistas para vagas que for selecionado
+              </h3>
+              <p class="lighter">
+                Você vai passar por algumas entrevists ao longo do processo para a vaga a qual você se candidatou
+              </p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-2 col-md-12 col-sm-12 centered">
+              <div class="round circle icon with-border without-background gt lower"></div>
+            </div>
+            <div class="col-lg-10 col-md-12 col-sm-12">
+              <h3 class="bold line-height-lower darker">
+                Ser aprovado na vaga
+              </h3>
+              <p class="lighter">
+                Depois das entrevistas, você será convidado a fechar o intercâmbio para a oportunidade que for aceito, mediante o pagamento
+                de uma taxa administrativa
+              </p>
+            </div>
+          </div>
           <div class="row">
             <div class="col-lg-2 col-md-12 col-sm-12 centered">
               <div class="round circle icon with-border without-background gt lower"></div>
@@ -158,7 +165,7 @@
                 Como será meu contato com a AIESEC durante o intercâmbio?
               </h3>
               <p class='lighter italic'>
-                Ele será feito com frequência tanto pela AIESEC de destino quanto pela AIESEC de origem, combinado previamente por vocês
+                Ele será feito com frequência tanto pela AIESEC de destino quanto pela AIESEC de origem, combinado previamente por vocês.
               </p>
             </div>
             <div class="col-sm-12">
@@ -166,15 +173,28 @@
                 Como é a questão do pagamento?
               </h3>
               <p class='lighter italic'>
-                Você fará o processo todo sem custos, e só após ser aprovado em uma vaga que assinará o contrato com a AIESEC e pagará a taxa.
+                Você fará o processo todo sem custos, e só após ser aprovado em uma vaga que assinará o contrato com a AIESEC e pagará a
+                taxa.
               </p>
             </div>
             <div class="col-sm-12">
               <h3 class='semibold'>
-                Precisa de seguro saúde para o período todo do intercâmbio?
+                Preciso de seguro saúde para viajar?
               </h3>
               <p class='lighter italic'>
-                Sim, só é permitida a realização do intercâmbio com o seguro saúde, para garantir sua assistência médica durante todo o período.
+                Sim, o seguro saúde é obrigatório no seu intercâmbio com a AIESEC, para garantir seu bem-estar durante toda a viagem. Nós
+                recomendamos o seguro Assistcard para nossos intercambistas, mas você pode contratar a seguradora que você
+                preferir.
+              </p>
+            </div>
+            <div class="col-sm-12">
+              <h3 class='semibold'>
+                Qual o perfil ideal para fazer um Talento Global?
+              </h3>
+              <p class='lighter italic'>
+                Você não precisa ser estudante ou recém-formado para esse intercâmbio. O que é necessário é ter entre 18 e 30 anos, com inglês
+                avançado e experiência prévia em alguma dessas áreas: Ensino de Línguas, Marketing, Tecnologia da Informação,
+                Gestão.
               </p>
             </div>
             <div class="col-sm-12">
