--- a/src/app/landing-page-gv/landing-page-gv.component.html
+++ b/src/app/landing-page-gv/landing-page-gv.component.html
@@ -2,7 +2,7 @@
   <div class="goToTop" [ngx-scroll-to]="'#header-product'">
     <i class="fas fa-sort-up"></i>
   </div>
-  
+
   <app-landing-page-menu></app-landing-page-menu>
 
   <section class="product-description margin-top-and-bottom">
@@ -14,8 +14,8 @@
             Visão geral do programa
           </h2>
           <p>
-            O Voluntário Global é uma experiência voluntário em ONGs de diversos países. Todos os projetos são vinculados ao Objetivos
-            Desenvolvimento Sustentável das Nações Unidas e tem impacto real nas comunidades onde são realizados. Os projetos
+            O Voluntário Global é uma experiência voluntária em ONGs de diversos países. Todos os projetos são vinculados aos Objetivos
+            Desenvolvimento Sustentável das Nações Unidas e têm impacto real nas comunidades onde são realizados. Os projetos
             duram a partir de 6 semanas e o único requisito é a vontade de deixar sua marca no mundo!
         </div>
       </div>
@@ -139,10 +139,12 @@
             </div>
             <div class="col-sm-12">
               <h3 class='semibold'>
-                Precisa de seguro saúde para o período todo do intercâmbio?
+                Preciso de seguro saúde para viajar?
               </h3>
               <p class='lighter italic'>
-                Sim, só é permitida a realização do intercâmbio com o seguro saúde, para garantir sua assistência médica durante todo o período
+                Sim, o seguro saúde é obrigatório no seu intercâmbio com a AIESEC, para garantir seu bem-estar durante toda a viagem. Nós
+                recomendamos o seguro Assistcard para nossos intercambistas, mas você pode contratar a seguradora que você
+                preferir.
               </p>
             </div>
             <div class="col-sm-12">
