--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -172,7 +172,7 @@
               <img src="../../assets/images/icon-people.png" class="coin">
               <p class="coin-text">
                 <strong>2000</strong> membros
-                <br> no brasil</p>
+                <br> no Brasil</p>
             </div>
             <div class="col-sm align-center">
               <img src="../../assets/images/icon-world.png" class="coin">
@@ -221,27 +221,27 @@
         <div class="col-lg-7 col-sm-12 col-md-12 align-left">
           <ul>
             <li class="bullet-1 margin">
+              <div class='bullet-icon icon-1'></div>
               <span>
-                Conhecer e viver seus valores pessoais, enquanto explora suas paixões e
-                <br> seus pontos fortes.
+                Conhecer e viver seus valores pessoais, enquanto explora suas paixões e seus pontos fortes.
               </span>
             </li>
             <li class="bullet-2 margin">
+              <div class='bullet-icon icon-2'></div>
               <span>
-                Provar sua habilidade de fazer uma diferença no mundo, 
-                <br> se conectando com temas globais.
+                Provar sua habilidade de fazer uma diferença no mundo, se conectando com temas globais.
               </span>
             </li>
             <li class="bullet-3 margin">
+              <div class='bullet-icon icon-3'></div>
               <span>
-                Desenvolver sua habilidades de comunicação em um ambiente de
-                <br> diversidade.
+                Desenvolver sua habilidades de comunicação em um ambiente de diversidade.
               </span>
             </li>
             <li class="bullet-4 margin">
+              <div class='bullet-icon icon-4'></div>
               <span>
-                Tomar decisões para solucionar problemas diversos em ambientes
-                <br> desafiadores.
+                Tomar decisões para solucionar problemas diversos em ambientes desafiadores.
               </span>
             </li>
           </ul>
